# meeting-minutes

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
meeting_minutes/: database.py  models.py  repository.py  services.py  tab_history.py  tab_new.py  tab_prompts.py  tabs.py
tests/: test_repository.py  test_services.py
